# claudeminer

./: .gitignore  README.md  notarize.sh  package-lock.json  package.json
Casks/: claudeminer.rb
scripts/: build-dmg.sh
src/: app.js  i18n.js  index.html  metaverse.js  splash.html  styles.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  network.rs  types.rs
src-tauri/src/coordinator/: core.rs  mod.rs
src-tauri/src/event/: emitter.rs  mod.rs
src-tauri/src/hooks/: manager.rs  mod.rs  receiver.rs  sender.rs
src-tauri/src/monitor/: cpu.rs  log.rs  mod.rs
src-tauri/src/notification/: mod.rs  sender.rs
src-tauri/src/session/: analyzer.rs  cleaner.rs  finder.rs  manager.rs  mod.rs  state.rs
src-tauri/src/status/: debouncer.rs  file_lock.rs  hybrid.rs  mod.rs
