[package]
name = "claude-miner"
version = "1.0.0"
description = "A visual process monitor for Claude Code sessions"
authors = ["JUKI-J"]
license = "MIT"
repository = "https://github.com/JUKI-J/claudeminer"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "notification-all", "system-tray", "icon-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
