[package]
name = "claude-miner"
version = "1.1.1"
description = "A visual process monitor for Claude Code sessions"
authors = ["JUKI-J"]
license = "MIT"
repository = "https://github.com/JUKI-J/claudeminer"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-confirm", "path-all", "fs-read-file", "shell-open", "notification-all", "system-tray", "icon-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
notify = "6.1"  # File system watcher for log monitoring
dirs = "5.0"    # For home directory access
tempfile = "3.8" # For testing (optional)
once_cell = "1.19"  # For singleton pattern in notification module

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["fs"] }

[target.'cfg(target_os = "windows")'.dependencies]
